test(framework): improve interop server compatibility with older Yoko
- replace ReadBuffer.align() usage in ServerInstance with manual alignment logic to avoid return-type incompatibilities across Yoko versions when parsing IOR profiles
- extend inter-process server JVM setup to print the assembled classpath and open java.base/java.util in addition to java.base/java.lang for older-version interop runs
- substantive lines added: 35, lines removed: 21

Co-authored-by-AI: IBM Bob 1.0.2